* io.c (copy_stream_fallback_body): check nil for EOF of read method.   patch by Eric Wong.  [ruby-core:39134] [Bug #5237]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@33515 b2dd03c8-39d4-4d8f-98ff-823fe69b080e